fix overflow

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -7,6 +7,7 @@ body {
 }
 
 .content-frame {
+    position:relative;
     background: linear-gradient(135deg, rgb(99, 106, 255) 0%, rgb(228, 119, 119) 100%);
     display: flex;
     flex-direction:column;
